--- a/Changelog Component/style.css
+++ b/Changelog Component/style.css
@@ -12,3 +12,37 @@ body{
     align-items: center;
     
 }
+
+header{
+    border: 2px solid red;
+}
+
+div{
+    display: flex;
+}
+.first_para{
+    border: 2px solid red;
+    background-color: aqua;
+    text-align: right;
+    padding: 0 20px;
+}
+.dot{
+    background-color: red;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin: 2rem;
+}
+.dot::before{
+    content: '';
+    background-color: red;
+    width: 1px;
+    height: 12px;
+}
+
+div p{
+    border: 2px solid red;
+    background-color: aqua;
+    text-align: left;
+    padding: 0 20px;
+}
