--- a/Artisan Connect/artisan-connect/src/components/HeaderSlider/HeaderSlider.css
+++ b/Artisan Connect/artisan-connect/src/components/HeaderSlider/HeaderSlider.css
@@ -1,6 +1,6 @@
 .header-slider {
   width: 100%;
-  height: 75vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -31,7 +31,7 @@
     color: orange;
 }
 .text-container h1{
-    /* font-size: 80px; */
+    font-weight: 600;
     color: black;
 }
 .text-container .btn{
