--- a/Artisan Connect/artisan-connect/src/components/Banner/Banner.css
+++ b/Artisan Connect/artisan-connect/src/components/Banner/Banner.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 50vh;
     border-radius: 10px;
-    background-color: red;
+    background-color: var(--bg-light);
     overflow: hidden;
     position: relative;
 }
@@ -24,7 +24,7 @@
     margin-bottom: 5px;
 }
 .text-format p{
-    color: black;
+    color: var(--text-dark);
 }
 .text-format button{
     width: 150px;
@@ -32,7 +32,7 @@
     border: none;
     margin-top: 10px;
     outline: none;
-    background-color: orange;
+    background-color: var(--primary);
     color: white;
     border-radius: 5px;
     display: inline-flex;
