--- a/Artisan Connect/artisan-connect/src/components/News/News.css
+++ b/Artisan Connect/artisan-connect/src/components/News/News.css
@@ -23,13 +23,13 @@
     height: 100%;
     padding-left: 25px ;
     font-size: 15px;
-    border: 1px solid black;
+    border: 1px solid #ccc;
     border-radius: 5px;
     outline: none;
 }
 .news .input-field button{
     margin-left: -80px;
-    background-color: orange;
+    background-color: var(--primary);
     font-size: 15px;
     width: 200px;
     height: 60px;
